# movie_irv

./: pyproject.toml
movie_irv/: 20200516.ipynb  20200518.ipynb  20200525.ipynb  20200601.ipynb  20200613.ipynb  20200615.ipynb  20200622.ipynb  20200629.ipynb  20200706.ipynb  20200713.ipynb  20200720.ipynb  20200727.ipynb  20200803.ipynb  20200810.ipynb  20200817.ipynb  20200823.ipynb  20200830.ipynb  20200906.ipynb  20200913.ipynb  20200920.ipynb  20200927.ipynb  20201004.ipynb  20201011.ipynb  20201018.ipynb  20201025.ipynb  20201101.ipynb  20201108.ipynb  20201115.ipynb  20201122.ipynb  20201129.ipynb  20201206.ipynb  20201212.ipynb  20201219.ipynb  20201226.ipynb  20210102.ipynb  20210109.ipynb  20210116.ipynb  20210124.ipynb  20210130.ipynb  20210206.ipynb  (+30 more)
movie_irv/data/: 20200504.csv  20200516 (copy).csv  20200516.csv  20200518.csv  20200525.csv  20200601.csv  20200613.csv  20200615.csv  20200622.csv  20200629.csv  20200706.csv  20200713.csv  20200720.csv  20200727.csv  20200803.csv  20200810.csv  20200817.csv  20200823.csv  20200830.csv  20200906.csv  20200913.csv  20200920.csv  20200927.csv  20201004.csv  20201011.csv  20201018.csv  20201025.csv  20201101.csv  20201108.csv  20201115.csv  20201122.csv  20201129.csv  20201206.csv  20201212.csv  20201219.csv  20201226.csv  20210102.csv  20210109.csv  20210116.csv  20210124.csv  (+32 more)
movie_irv/results/: all_previous_submissions.csv
movie_irv/scripts/: previous_submissions.R
