[tool.poetry]
name = "movie_irv"
version = "0.1.0"
description = ""
authors = ["lstmemery <matthew.emery44@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.5"
pyrankvote = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
